feat(i18n): implement multilingual support in key components; replace static texts with i18n keys

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -115,7 +115,12 @@
     "active": "Aktiv",
     "hidden": "Versteckt",
     "updating": "Wird aktualisiert...",
-    "loading": "Lade Gebäude..."
+    "loading": "Lade Gebäude...",
+    "updatedJustNow": "gerade eben aktualisiert",
+    "updatedMinutesAgo": "vor {minutes} Minuten aktualisiert",
+    "updatedOneMinuteAgo": "vor 1 Minute aktualisiert",
+    "updatedHoursAgo": "vor {hours} Stunden aktualisiert",
+    "updatedOneHourAgo": "vor 1 Stunde aktualisiert"
   },
   "apartments": {
     "title": "Wohnungen",
@@ -142,7 +147,35 @@
     "flushingActive": "Spülung läuft",
     "never": "Nie",
     "overdue": "Überfällig",
-    "loading": "Lade Wohnungen..."
+    "loading": "Lade Wohnungen...",
+    "overview": "Apartment-Übersicht",
+    "apartment": "Apartment",
+    "actions": "Aktionen",
+    "flush": "Spülen",
+    "history": "Historie",
+    "updating": "Wird aktualisiert...",
+    "neverFlushed": "Noch nie",
+    "notPlanned": "Nicht geplant",
+    "flushStatus": "Status Spülung",
+    "statusCurrent": "Aktuell",
+    "statusPending": "Anstehend",
+    "statusDue": "Fällig",
+    "statusOverdue": "Überfällig",
+    "statusDisabled": "Deaktiviert",
+    "today": "Heute",
+    "yesterday": "Gestern",
+    "daysAgo": "vor {days} Tagen",
+    "todayDue": "Heute fällig",
+    "tomorrowDue": "Morgen fällig",
+    "daysLeft": "in {days} Tagen",
+    "unknown": "Unbekannt",
+    "invalidDate": "Ungültiges Datum",
+    "updatedJustNow": "gerade eben aktualisiert",
+    "updatedMinutesAgo": "vor {minutes} Minuten aktualisiert",
+    "updatedOneMinuteAgo": "vor 1 Minute aktualisiert",
+    "updatedHoursAgo": "vor {hours} Stunden aktualisiert",
+    "updatedOneHourAgo": "vor 1 Stunde aktualisiert",
+    "apartmentsCount": "{count} Apartments"
   },
   "flushing": {
     "title": "Leerstandsspülungen",
@@ -199,7 +232,26 @@
     "stop": "STOPP",
     "back": "Zurück",
     "sync": "Sync",
-    "unsynced": "unsynced"
+    "unsynced": "unsynced",
+    "offline": "Offline",
+    "online": "Online",
+    "synced": "Synced",
+    "pending": "Pending",
+    "successful": "Erfolgreich",
+    "failed": "Fehler",
+    "apartmentNotFound": "Apartment nicht gefunden",
+    "errorLoadingApartment": "Fehler beim Laden der Apartment-Daten",
+    "errorSavingFlush": "Fehler beim Speichern der Spülung",
+    "errorSyncing": "Fehler bei der Synchronisation",
+    "minDurationReachedCanStop": "Mindestdauer erreicht - Stopp möglich",
+    "readyForFlushing": "Bereit für Spülung",
+    "neverFlushed": "Noch nie gespült",
+    "today": "Heute",
+    "yesterday": "Gestern",
+    "todayDue": "Heute fällig",
+    "tomorrowDue": "Morgen fällig",
+    "daysAgo": "vor {days} Tagen",
+    "daysLeft": "in {days} Tagen"
   },
   "settings": {
     "title": "Konfiguration",
@@ -265,6 +317,33 @@
     "switchToOnline": "Zu Online-Modus wechseln",
     "dataWillSync": "Änderungen werden synchronisiert, sobald Sie wieder online sind",
     "featureOnlineOnly": "Dieses Feature ist nur im Online-Modus verfügbar"
+  },
+  "online": {
+    "connectionStatus": "Verbindungsstatus",
+    "browser": "Browser",
+    "server": "Server",
+    "online": "Online",
+    "reachable": "Erreichbar",
+    "unreachable": "Nicht erreichbar",
+    "lastPing": "Letzter Ping",
+    "agoSeconds": "vor {seconds}s",
+    "errors": "Fehler",
+    "manualOfflineMode": "Manueller Offline-Modus",
+    "monitoringPaused": "Netzwerküberwachung ist pausiert",
+    "autoCheckRunning": "Automatische Verbindungsprüfung läuft",
+    "pingDisabled": "Ping-Prüfungen deaktiviert",
+    "autoMonitoringActive": "Automatische Überwachung aktiv",
+    "checking": "Prüfe Verbindung...",
+    "checkNow": "Verbindung jetzt prüfen",
+    "disabledInManualMode": "Im manuellen Modus deaktiviert",
+    "limitedMode": "Eingeschränkter Modus",
+    "featuresNotAvailable": "Folgende Features sind offline nicht verfügbar",
+    "changePassword": "Passwort ändern",
+    "statistics": "Statistiken",
+    "userManagement": "Benutzerverwaltung",
+    "buildingManagement": "Gebäudeverwaltung",
+    "offlineAvailable": "Offline verfügbar",
+    "flushingContinue": "Leerstandspülungen können weiterhin durchgeführt werden"
   },
   "errors": {
     "general": "Ein Fehler ist aufgetreten",
