--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -115,7 +115,12 @@
     "active": "Active",
     "hidden": "Hidden",
     "updating": "Updating...",
-    "loading": "Loading buildings..."
+    "loading": "Loading buildings...",
+    "updatedJustNow": "just updated",
+    "updatedMinutesAgo": "updated {minutes} minutes ago",
+    "updatedOneMinuteAgo": "updated 1 minute ago",
+    "updatedHoursAgo": "updated {hours} hours ago",
+    "updatedOneHourAgo": "updated 1 hour ago"
   },
   "apartments": {
     "title": "Apartments",
@@ -142,7 +147,35 @@
     "flushingActive": "Flushing active",
     "never": "Never",
     "overdue": "Overdue",
-    "loading": "Loading apartments..."
+    "loading": "Loading apartments...",
+    "overview": "Apartment Overview",
+    "apartment": "Apartment",
+    "actions": "Actions",
+    "flush": "Flush",
+    "history": "History",
+    "updating": "Updating...",
+    "neverFlushed": "Never",
+    "notPlanned": "Not planned",
+    "flushStatus": "Flush Status",
+    "statusCurrent": "Current",
+    "statusPending": "Pending",
+    "statusDue": "Due",
+    "statusOverdue": "Overdue",
+    "statusDisabled": "Disabled",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "daysAgo": "{days} days ago",
+    "todayDue": "Due today",
+    "tomorrowDue": "Due tomorrow",
+    "daysLeft": "in {days} days",
+    "unknown": "Unknown",
+    "invalidDate": "Invalid date",
+    "updatedJustNow": "just updated",
+    "updatedMinutesAgo": "updated {minutes} minutes ago",
+    "updatedOneMinuteAgo": "updated 1 minute ago",
+    "updatedHoursAgo": "updated {hours} hours ago",
+    "updatedOneHourAgo": "updated 1 hour ago",
+    "apartmentsCount": "{count} Apartments"
   },
   "flushing": {
     "title": "Vacancy Flushing",
@@ -199,7 +232,26 @@
     "stop": "STOP",
     "back": "Back",
     "sync": "Sync",
-    "unsynced": "unsynced"
+    "unsynced": "unsynced",
+    "offline": "Offline",
+    "online": "Online",
+    "synced": "Synced",
+    "pending": "Pending",
+    "successful": "Successful",
+    "failed": "Error",
+    "apartmentNotFound": "Apartment not found",
+    "errorLoadingApartment": "Error loading apartment data",
+    "errorSavingFlush": "Error saving flush",
+    "errorSyncing": "Error during synchronization",
+    "minDurationReachedCanStop": "Minimum duration reached - stop possible",
+    "readyForFlushing": "Ready for flushing",
+    "neverFlushed": "Never flushed",
+    "today": "Today",
+    "yesterday": "Yesterday",
+    "todayDue": "Due today",
+    "tomorrowDue": "Due tomorrow",
+    "daysAgo": "{days} days ago",
+    "daysLeft": "in {days} days"
   },
   "settings": {
     "title": "Configuration",
@@ -265,6 +317,33 @@
     "switchToOnline": "Switch to online mode",
     "dataWillSync": "Changes will be synchronized when you are back online",
     "featureOnlineOnly": "This feature is only available in online mode"
+  },
+  "online": {
+    "connectionStatus": "Connection Status",
+    "browser": "Browser",
+    "server": "Server",
+    "online": "Online",
+    "reachable": "Reachable",
+    "unreachable": "Unreachable",
+    "lastPing": "Last Ping",
+    "agoSeconds": "{seconds}s ago",
+    "errors": "Errors",
+    "manualOfflineMode": "Manual Offline Mode",
+    "monitoringPaused": "Network monitoring is paused",
+    "autoCheckRunning": "Automatic connection check running",
+    "pingDisabled": "Ping checks disabled",
+    "autoMonitoringActive": "Automatic monitoring active",
+    "checking": "Checking connection...",
+    "checkNow": "Check connection now",
+    "disabledInManualMode": "Disabled in manual mode",
+    "limitedMode": "Limited Mode",
+    "featuresNotAvailable": "The following features are not available offline",
+    "changePassword": "Change password",
+    "statistics": "Statistics",
+    "userManagement": "User management",
+    "buildingManagement": "Building management",
+    "offlineAvailable": "Available offline",
+    "flushingContinue": "Vacancy flushings can still be performed"
   },
   "errors": {
     "general": "An error occurred",
