feat: enhance offline flushing experience with automatic sync and improved UI

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -237,6 +237,7 @@
     "online": "Online",
     "synced": "Synced",
     "pending": "Pending",
+    "offlineCreated": "Offline erstellt",
     "successful": "Erfolgreich",
     "failed": "Fehler",
     "apartmentNotFound": "Apartment nicht gefunden",
