--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -237,6 +237,7 @@
     "online": "Online",
     "synced": "Synced",
     "pending": "Pending",
+    "offlineCreated": "Created offline",
     "successful": "Successful",
     "failed": "Error",
     "apartmentNotFound": "Apartment not found",
