feat(dashboard,flushing): improve apartment stats grouping, add touch-friendly auto-navigate toggle, and enhance i18n
- Group apartment statistics by building in dashboard, using localStorage lookup for building names
- Display grouped stats in responsive cards for better overview
- Replace auto-navigate checkbox with touch-friendly toggle button in flushing UI
- Make auto-navigate delay configurable via localStorage
- Refactor apartment details to table layout for clarity
- Add i18n keys for "on", "off", and "apartments" in de/en translations

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -2,6 +2,8 @@
   "common": {
     "save": "Speichern",
     "user": "Benutzer",
+    "on": "Ein",
+    "off": "Aus",
     "unknown": "Unbekannt",
     "never": "Nie",
     "cancel": "Abbrechen",
@@ -75,6 +77,7 @@
     "noData": "Keine Daten verfügbar",
     "statisticsOnlineOnly": "Statistiken und Export-Funktionen sind nur im Online-Modus verfügbar.",
     "entries": "Einträge",
+    "apartments": "Wohnungen",
     "avgDurationPerEntry": "Ø Dauer pro Eintrag",
     "avgWorkTimePerDay": "Ø Arbeitszeit/Tag",
     "avgWorkSpanPerDay": "Ø Arbeitsspanne/Tag",
