feat(storage): migrate data handling from localStorage to IndexedDB for improved offline support

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -354,6 +354,7 @@
     "identificationHelp": "Nur Administratoren können die Identifikation ändern",
     "userRole": "Benutzerrolle",
     "selectRole": "Rolle auswählen",
+    "roleChangeInfo": "Rollen können nur von Administratoren geändert werden",
     "passwordSection": "Passwort ändern",
     "currentPassword": "Aktuelles Passwort",
     "currentPasswordPlaceholder": "Aktuelles Passwort eingeben",
